Comment view setting, likely buggy